--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -38,6 +38,9 @@ spring.jpa.properties.jadira.usertype.autoRegisterUserTypes=true
 # = SECURITY
 # ==============================
 security.ignored=/**
-spring.security.enabled=false
-management.security.enabled=false
-security.basic.enabled=false
+spring.security.enabled=true
+management.security.enabled=true
+security.basic.enabled=true
+
+
+token.secret = bF7449XF5lc5iz5sW5Y5suX4d7ok4P7j
